Added suspend/resume function

--- a/popup.html
+++ b/popup.html
@@ -1253,6 +1253,12 @@ function signout() {
   window.close();
 }
 
+function suspend() {
+  tweetManager.suspend = ! tweetManager.suspend;
+  if (tweetManager.suspend) $("#suspend_toggle").text("Resume");
+  else  $("#suspend_toggle").text("Suspend");
+}
+
 function newTweetsAvailable(count, unreadCount, timelineId) {
   if(!window) {
     //Sanity check, popup might be closed.
@@ -1390,6 +1396,7 @@ $(function() {
       $(window).resize(resizeWindowFunc);
     }
   });
+  if (tweetManager.suspend) $("#suspend_toggle").text("Resume");
 });
 </script>
 </head>
@@ -1427,7 +1434,8 @@ $(function() {
   <span class="header_link_left">
     <a href="javascript:signout()">Log out</a> |
     <a href="#" onclick="openTab(chrome.extension.getURL('options.html'))">Options</a> |
-    <a href="javascript:Composer.refreshNew();">Refresh</a>
+    <a href="javascript:Composer.refreshNew();">Refresh</a> |
+    <a id="suspend_toggle" href="javascript:suspend()">Suspend</a>
   </span>
   <a class="header_link_right" href="javascript:Renderer.markAllAsRead();">Mark all as read</a>
   <img src="img/loading.gif" id="loading" style="display: none;"/>
