--- a/background.html
+++ b/background.html
@@ -56,6 +56,8 @@ function TweetManager() {
   this.listsCache = null;
   this.listsTabCount = OptionsBackend.get('lists_count');
 
+  this.suspend false;
+
   this.selectedListsData = Persistence.selectedLists();
   this.timelineOrderData = Persistence.timelineOrder();
   this.oauthTokenData = Persistence.oauthTokenData();
