--- a/popup.html
+++ b/popup.html
@@ -645,11 +645,11 @@ var Renderer = {
 
   geoImage: function (aElement, lat, long, name) {
        $(aElement).tipsy({
-        title: function () {
-             lat = lat.toFixed(6).toString().replace(".", "");
-	     long = long.toFixed(6).toString().replace(".", "");
-	     var url =  'http://maps.google.com/mapdata?cc=JP&min_priority=1&w=160&h=160&latitude_e6=' + lat + '&longitude_e6=' + long + '&zm=2000&Point=b&Point.latitude_e6=' + lat + '&Point.longitude_e6=' + long + '&Point.iconid=33&Point=e';
-             return "<img src=\"" + url+ "\" />";
+         title: function () {
+           lat = lat.toFixed(6).toString().replace(".", "");
+           long = long.toFixed(6).toString().replace(".", "");
+           var url = 'http://maps.google.com/mapdata?cc=JP&min_priority=1&w=160&h=160&latitude_e6=' + lat + '&longitude_e6=' + long + '&zm=2000&Point=b&Point.latitude_e6=' + lat + '&Point.longitude_e6=' + long + '&Point.iconid=33&Point=e';
+           return "<img src=\"" + url+ "\" />";
         },
         html: true,
         showNow: true,
@@ -663,22 +663,26 @@ var Renderer = {
       return;
     }
     var m = url.match(/http:\/\/(www\.)?(twitpic|twitgoo|yfrog|movapic).com\/(.*)/);
-    if (m) {
-       $(aElement).tipsy({
+    if(m) {
+      $(aElement).tipsy({
         title: function () {
-           if (m[2] == "twitpic" || m[2] == "twitgoo") return "<img style=\"opacity:1.0\" src=\"http://" + m[2] + ".com/show/thumb/" + m[3] + "\" />";
-           if (m[2] == "yfrog") return "<img style=\"opacity:1.0\" src=\"http://yfrog.com/" + m[3] + ".th.jpg\" />";
-           if (m[2] == "movapic") {
-              var iid = m[3].split(/\//)[1];
-              return "<img style=\"opacity:1.0\" src=\"http://image.movapic.com/pic/t_" + iid + ".jpeg\" />";
-           }
+          if(m[2] == "twitpic" || m[2] == "twitgoo") {
+            return "<img style=\"opacity:1.0\" src=\"http://" + m[2] + ".com/show/thumb/" + m[3] + "\" />";
+          }
+          if(m[2] == "yfrog") {
+            return "<img style=\"opacity:1.0\" src=\"http://yfrog.com/" + m[3] + ".th.jpg\" />";
+          }
+          if(m[2] == "movapic") {
+            var iid = m[3].split(/\//)[1];
+            return "<img style=\"opacity:1.0\" src=\"http://image.movapic.com/pic/t_" + iid + ".jpeg\" />";
+          }
         },
         html: true,
         showNow: true,
         opacity: 1.0,
         gravity: $.fn.tipsy.autoWE
       });
-     return;
+      return;
     }
     $(aElement).tipsy({
       title: function() {
@@ -768,7 +772,7 @@ var Renderer = {
       }
       from = tweetSource.replace(/(href=(['"])(.*?)\2)/i, "href='#' onclick=\"openTab('$3')\"");
     }
-    if (tweet.geo) {
+    if(tweet.geo) {
       geo = " <a href=\"#\" onclick=\"openTab('";
       geo += "http://maps.google.com/maps?q=loc:" + tweet.geo.coordinates[0] + "," + tweet.geo.coordinates[1] + " "
       geo += encodeURI("(" + tweet.user.screen_name + ")");
@@ -806,10 +810,10 @@ var Renderer = {
     str += '<div class="tweet_overlay" style="' + overlayStyle + '">';
     str += '<div class="first_container">';
     if(tweet.retweeted_status) {
-    str += '<img class="profile" style="margin-right: 0px;width: 40px; height: 40px" src="' + user.profile_image_url + '" onclick="Renderer.handleUserClick(\'' + user.screen_name + '\', \'' + TwitterLib.URLS.BASE + user.screen_name + '\')" />';
-    str += '<img class="profile" style="margin-bottom: 20px;margin-right: -12px;position: relative; top: 24px;left: -16px; width: 24px; height: 24px;" src="'+ tweet.user.profile_image_url +'"/>'
+      str += '<img class="profile" style="margin-right: 0px;width: 40px; height: 40px" src="' + user.profile_image_url + '" onclick="Renderer.handleUserClick(\'' + user.screen_name + '\', \'' + TwitterLib.URLS.BASE + user.screen_name + '\')" />';
+      str += '<img class="profile" style="margin-bottom: 20px;margin-right: -12px;position: relative; top: 24px;left: -16px; width: 24px; height: 24px;" src="'+ tweet.user.profile_image_url +'"/>'
     } else {
-    str += '<img class="profile" src="' + user.profile_image_url + '" onclick="Renderer.handleUserClick(\'' + user.screen_name + '\', \'' + TwitterLib.URLS.BASE + user.screen_name + '\')"></img>';
+      str += '<img class="profile" src="' + user.profile_image_url + '" onclick="Renderer.handleUserClick(\'' + user.screen_name + '\', \'' + TwitterLib.URLS.BASE + user.screen_name + '\')"></img>';
     }
     str += '<a href="#" class="user" screen_name="' + user.screen_name + '" onclick="Renderer.handleUserClick(\'' + user.screen_name + '\', \'' + TwitterLib.URLS.BASE + user.screen_name + '\')" title="' + tweetTitleUserName + '">' + tweetUserName + '</a>';
 
@@ -836,9 +840,9 @@ var Renderer = {
     if (geo) {
       str += '<span class="geo_tag">' + geo + '</span>';
     }
-    if (tweetTimeline.match(/^lists_/) && tweetManager.currentTimeline != tweetTimeline) {
+    if(templateId == TimelineTemplate.LISTS && tweetManager.currentTimelineId != tweetTimeline) {
       var list = tweetManager.getList(tweetTimeline);
-      if (list != null) {
+      if(list != null) {
         var path = list.uri.substr(1);
         str += ' (List: <a href="#" onclick="openTab(\''+TwitterLib.URLS.BASE + path + '\');" title="@' + path + '">' + list.name + '</a>)';
       }
