Removing some inline styles and organizing them into base.css

--- a/popup.html
+++ b/popup.html
@@ -810,8 +810,8 @@ var Renderer = {
     str += '<div class="tweet_overlay" style="' + overlayStyle + '">';
     str += '<div class="first_container">';
     if(tweet.retweeted_status) {
-      str += '<img class="profile" style="margin-right: 0px;width: 40px; height: 40px" src="' + user.profile_image_url + '" onclick="Renderer.handleUserClick(\'' + user.screen_name + '\', \'' + TwitterLib.URLS.BASE + user.screen_name + '\')" />';
-      str += '<img class="profile" style="margin-bottom: 20px;margin-right: -12px;position: relative; top: 24px;left: -16px; width: 24px; height: 24px;" src="'+ tweet.user.profile_image_url +'"/>'
+      str += '<img class="profile retweet_source" src="' + user.profile_image_url + '" onclick="Renderer.handleUserClick(\'' + user.screen_name + '\', \'' + TwitterLib.URLS.BASE + user.screen_name + '\')" />';
+      str += '<img class="profile retweet_retweeter" src="'+ tweet.user.profile_image_url +'"/>'
     } else {
       str += '<img class="profile" src="' + user.profile_image_url + '" onclick="Renderer.handleUserClick(\'' + user.screen_name + '\', \'' + TwitterLib.URLS.BASE + user.screen_name + '\')"></img>';
     }
